--- a/index.html
+++ b/index.html
@@ -5,3 +5,4 @@ title: Test
 
 <input id="pac-input" class="controls" type="text" placeholder="Search Box">
 <div id="map"></div>
+<div style="clear: both;"></div>
