--- a/index.html
+++ b/index.html
@@ -4,4 +4,6 @@ title: Test
 ---
 
 <input id="pac-input" class="controls" type="text" placeholder="Search Box">
-<div id="map"></div>
+<div id="map">
+<img src="assets/blank_pixel.png" alt="Blank Pixel" width="640" height="480">
+</div>
