--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@ title: Test
 ---
 
 <input id="pac-input" class="controls" type="text" placeholder="Search Box">
-<div id="map">
+<div id="map" class="inner">
 </div>
