--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@ layout: map
 title: Test
 ---
 
-<p>
+
 <input id="pac-input" class="controls" type="text" placeholder="Search Box">
-<div id="map" class="inner">
+<div id="map" class="inner" style="padding: 150px 10px;">
 </div>
-</p>
+
