--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@ title: Test
 <div id="map" class="inner" style="padding: 150px 10px;">
 </div>
 
-<p>
+<p id="googlemapsresulttext">
   Enter the city above.
 </p>
