--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Test
 
 
 <input id="pac-input" class="controls" type="text" placeholder="Search Box">
-<div id="map" class="inner">
+<div id="map" class="inner" style="height: 300 px;">
 </div>
 
 <p id="googlemapsresulttext">
