--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Test
 
 
 <input id="pac-input" class="controls" type="text" placeholder="Search Box">
-<div id="map" class="inner" style="padding-top: 150 px; padding-bottom: 150 px; height: 300 px;">
+<div id="map" class="inner">
 </div>
 
 <p id="googlemapsresulttext">
