--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@ title: Test
 
 
 <input id="pac-input" class="controls" type="text" placeholder="Search Box">
-<div id="map" class="inner">
-</div>
 
-<p id="googlemapsresulttext">
-  Enter the city above.
-</p>
+<div id="GoogleMapsResults" style="float: left;">
+  <p id="googlemapsresulttext">
+    Enter the city above.
+  </p>
+</div>
+<div id="map" class="inner" style="float: right;">
+</div>
