--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@ title: Test
 ---
 
 
-<input id="pac-input" class="controls" type="text" placeholder="Search Box">
-
-<div id="GoogleMapsResults" style="float: left;">
-  <p id="googlemapsresulttext">
-    Enter the city above.
-  </p>
-</div>
-<div id="map" class="inner" style="float: right;">
+<div id="MapSection">
+  <div id="GoogleMapsResults">
+    <p id="googlemapsresulttext">
+      Enter the city above.
+    </p>
+  </div>
+  <input id="pac-input" class="controls" type="text" placeholder="Search Box">
+  <div id="map" class="inner">
+  </div>
 </div>
