--- a/index.html
+++ b/index.html
@@ -7,10 +7,16 @@ title: Test
 <div id="MapSection">
   <div id="GoogleMapsResults">
     <p id="googlemapsresulttext">
-      Enter the city above.
+      Enter the a place name to get Google Maps information on it.
     </p>
   </div>
   <input id="pac-input" class="controls" type="text" placeholder="Search Box">
   <div id="map" class="inner">
   </div>
+</div>
+
+<div id="InputLocation">
+  <input id="locLat" class="controls" type="text" placeholder="Enter Latitide as a number from -89.999 to 89.999 (North is positive)">
+  <input id="locLon" class="controls" type="text" placeholder="Enter Longitude as a number from -179.999 to 179.999 (East is positive)">
+  <input id="locEle" class="controls" type="text" placeholder="Enter Elevation in meters">
 </div>
