--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@ title: Test
 
 <div id="InputLocation">
   <p>
-    Latitide: 
-  <input id="locLat" class="controls" type="text" placeholder="-89.9 to 89.9 (N positive)">
+    Latitide North: 
+  <input id="locLat" class="controls" type="text" placeholder="-89.9 to 89.9 (S is -)">
   </p>
   <p>
-    Longitude: 
-    <input id="locLon" class="controls" type="text" placeholder="-179.9 to 179.9 (E positive)">
+    Longitude East: 
+    <input id="locLon" class="controls" type="text" placeholder="-179.9 to 179.9 (W is -)">
   </p>
   <p>
-    Elevation:
-    <input id="locEle" class="controls" type="text" placeholder="Elevation in meters">
+    Elevation (meters):
+    <input id="locEle" class="controls" type="text" placeholder="Elevation (m)">
   </p>
 </div>
