--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@ title: Test
     <p>
       Enter the a place name to get Google Maps information on it.
     </p>
-    Latitude North: <p id="GMLat">
+    <p id="GMLat">Latitude North:
     </p>
-    Longitude East: <p id="GMLon">
+    <p id="GMLon">Longitude East:
     </p>
-    Elevation (meters): <p id="GMEle">
+    <p id="GMEle">Elevation (meters):
     </p>
   </div>
   <input id="pac-input" class="controls" type="text" placeholder="Search Box">
@@ -22,6 +22,9 @@ title: Test
 </div>
 
 <div id="InputLocation">
+  <p>
+    Enter your own location values here (They will automatically load with a Google Maps result, if you requested one):
+  </p>
   <p>
     Latitide North: 
   <input id="locLat" class="controls" type="text" placeholder="-89.9 to 89.9 (S is -)">
