--- a/index.html
+++ b/index.html
@@ -7,13 +7,7 @@ title: Test
 <div id="MapSection">
   <div id="GoogleMapsResults">
     <p>
-      Enter the a place name to get Google Maps information on it.
-    </p>
-    <p id="GMLat">Latitude North:
-    </p>
-    <p id="GMLon">Longitude East:
-    </p>
-    <p id="GMEle">Elevation (meters):
+      You can use a Google Maps search to set your location values:
     </p>
   </div>
   <input id="pac-input" class="controls" type="text" placeholder="Search Box">
@@ -23,7 +17,7 @@ title: Test
 
 <div id="InputLocation">
   <p>
-    Enter your own location values here (They will automatically load with a Google Maps result, if you requested one):
+    Or, enter your own location values here (The Google Maps result will fill these in for you):
   </p>
   <p>
     Latitide North: 
