--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@ title: Test
   </p>
   <p>
     Latitide North: 
-  <input id="locLat" class="controls" type="text" placeholder="-89.9 to 89.9 (S is -)">
+  <input id="locLat" class="controls" type="text" placeholder="-89.9 to 89.9 (S is -)" value="31.8836667">
   </p>
   <p>
     Longitude East: 
-    <input id="locLon" class="controls" type="text" placeholder="-179.9 to 179.9 (W is -)">
+    <input id="locLon" class="controls" type="text" placeholder="-179.9 to 179.9 (W is -)" value="35.2323083">
   </p>
   <p>
     Elevation (meters):
-    <input id="locEle" class="controls" type="text" placeholder="Elevation (m)">
+    <input id="locEle" class="controls" type="text" placeholder="Elevation (m)" value="842">
   </p>
 </div>
