--- a/index.html
+++ b/index.html
@@ -31,4 +31,14 @@ title: Test
     Elevation (meters):
     <input id="locEle" class="controls" type="text" placeholder="Elevation (m)" value="842">
   </p>
+  <p>
+    Time Zone Offset from UTC:
+    <input id="locTimeZone" class="controls" type="text" placeholder="(Prepend "-" if negative)" value="2">
+  </p>
+</div>
+
+<div id="TestDiv">
+  <p id="TestParagraph">
+    This is the paragraph for testing the Solar Equations.
+  </p>
 </div>
