--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ title: Undergoing Construction and Testing
     <input id="locEle" class="controls" type="text" placeholder="Elevation (m)" value="842">
   </p>
   <p>
-    Time Zone Offset from UTC:
+    Time Zone Offset from UTC (hours):
     <input id="locTimeZone" class="controls" type="text" placeholder="(Prepend "-" if negative)" value="2">
   </p>
 </div>
