--- a/index.html
+++ b/index.html
@@ -42,3 +42,5 @@ title: Undergoing Construction and Testing
     This is the paragraph for testing the Solar Equations.
   </p>
 </div>
+
+<script src="assets/js/testequations.js"></script>
