--- a/index.html
+++ b/index.html
@@ -43,4 +43,6 @@ title: Undergoing Construction and Testing
   </p>
 </div>
 
+<!-- Load in this order -->
+<script src="assets/js/solarequations.js"></script>
 <script src="assets/js/testequations.js"></script>
