--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ title: Undergoing Construction and Testing
     This is the paragraph for testing the Solar Equations.
   </p>
   <p>
-    Find Solar Elevation Angle in Morning (degrees):
+    Find Solar Elevation Angle in Evening (degrees):
     <input id="TestAngle" class="controls" type="text" placeholder="(Prepend - if negative)" value="-16.1">
     <input type="button" value="Calculate!" onclick="getAngle();">
   </p>
