--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@ title: Undergoing Construction and Testing
 
 <div id="MapSection">
   <div id="GoogleMapsResults">
-    <p>
-      You can use a Google Maps search to set your location values:
-    </p>
+-You can use a Google Maps search to set your location values:
   </div>
   <input id="pac-input" class="controls" type="text" placeholder="Search Box">
   <div id="map" class="inner">
