--- a/index.html
+++ b/index.html
@@ -58,4 +58,5 @@ title: Undergoing Construction and Testing
 
 <!-- Load in this order -->
 <script src="assets/js/solarequations.js"></script>
+<script src="assets/js/halacha.js"></script>
 <script src="assets/js/calculate.js"></script>
