--- a/index.html
+++ b/index.html
@@ -4,11 +4,19 @@ title: Undergoing Construction and Testing
 ---
 
 
+
+<div id="ResultsDiv">
+  <p>These results are initially for the default location and date, and may NOT be correct for you:
+  </p>
+  <p id="resultsp" style="h1">
+  </p>
+</div>
+
 <div id="MapSection">
   <div id="Instructions">
     <p>
       You can use a Google Maps search to set your location values. Or, you can enter the values by hand below.
-      "When everything is set up how you want, hit the "Calculate!" button below.
+      "When everything is set up how you want, hit the "Calculate!" button below, and scroll back to the top to see the results.
     </p>
   </div>
   <input id="pac-input" class="controls" type="text" placeholder="Search Box">
@@ -47,13 +55,6 @@ title: Undergoing Construction and Testing
 
 <div id="Controls">
   <input type="button" value="Calculate!" onclick="getResults();">
-</div>
-
-<div id="ResultsDiv">
-  <p>Results:
-  </p>
-  <p id="resultsp">
-  </p>
 </div>
 
 <!-- Load in this order -->
