--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@ title: Undergoing Construction and Testing
 <div id="ResultsDiv">
   <p>These results are initially for the default location and date, and may NOT be correct for you:
   </p>
-  <h3 id="resultsp">
-  </h3>
+  <p id="resultsp">
+  </p>
 </div>
 
 <div id="MapSection">
