--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@ title: Undergoing Construction and Testing
 
 
 <div id="ResultsDiv">
-  <p>These results are initially for the default location and date, and may NOT be correct for you:
+  <p>These results are initially for the default location and date, and may <i>NOT</i> be correct for you:
   </p>
-  <p id="resultsp">
+  <p id="resultsp" style="center">
   </p>
 </div>
 
