--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Undergoing Construction and Testing
 
 
 <div id="ResultsDiv">
-  <p>These results are initially for the default location and date, and may <i>NOT</i> be correct for you:
+  <p>These results are initially for the default location and date, and may <strong>NOT</strong> be correct for you:
   </p>
   <p id="resultsp" style="center">
   </p>
