--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ title: Undergoing Construction and Testing
   <div id="Instructions">
     <p>
       You can use a Google Maps search to set your location values. Or, you can enter the values by hand below.
+      You can pick a different date below, also.
       When everything is set up how you want, hit the "Calculate!" button below, and scroll back to the top to see the results.
     </p>
   </div>
