--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@ title: Undergoing Construction and Testing
 
 
 <div id="ResultsDiv">
-  <p>These results are initially for the default location and date, and may <strong>NOT</strong> be correct for you:
+  <p>These results are initially for the default location and date, and may <strong>NOT</strong> be correct for you.
+    These zemanim are approximations. Neitz and Shkiah are the least accurate, and may differ by 1-2 minutes from what you observe,
+    if you are at a high altitude and have obstructions to your view of the horizon. The other times should be accurate to within 1 minute.
   </p>
   <p id="resultsp" style="text-align: center; font-size: 150%;">
   </p>
