--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@ title: Undergoing Construction and Testing
 </div>
 
 <!-- Load in this order -->
+<script src="assets/js/defaults.js"></script>
 <script src="assets/js/solarequations.js"></script>
 <script src="assets/js/halacha.js"></script>
 <script src="assets/js/calculate.js"></script>
