--- a/index.html
+++ b/index.html
@@ -33,19 +33,19 @@ title: Undergoing Construction and Testing
   </p>
   <p>
     Latitide North: 
-  <input id="locLat" class="controls" type="text" placeholder="-90 to 90 (S is -)" value="31.8836667">
+  <input id="locLat" class="controls" type="text" placeholder="-90 to 90 (S is -)" value="">
   </p>
   <p>
     Longitude East: 
-    <input id="locLon" class="controls" type="text" placeholder="-180 to 180 (W is -)" value="35.2323083">
+    <input id="locLon" class="controls" type="text" placeholder="-180 to 180 (W is -)" value="">
   </p>
   <p>
     Elevation (meters):
-    <input id="locEle" class="controls" type="text" placeholder="Elevation (m)" value="842">
+    <input id="locEle" class="controls" type="text" placeholder="Elevation (m)" value="">
   </p>
   <p>
     Time Zone Offset from UTC (hours):
-    <input id="locTimeZone" class="controls" type="text" placeholder="(Prepend - if negative)" value="2">
+    <input id="locTimeZone" class="controls" type="text" placeholder="(Prepend - if negative)" value="">
   </p>
 </div>
 
